--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   },
   "homepage": "https://github.com/redfieldstefan/mixandstones",
   "dependencies": {
-    "body-parser": "^1.9.1",
+    "body-parser": "^1.8.1",
     "express": "^4.10.0",
     "mongoose": "^3.8.18"
   },
   "devDependencies": {
+    "chai": "^1.10.0",
+    "chai-http": "^1.0.0",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.7.0",
@@ -29,6 +31,7 @@
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-express-server": "^0.4.19",
+    "grunt-jscs": "^0.8.1",
     "matchdep": "*"
   }
 }
