--- a/package.json
+++ b/package.json
@@ -19,16 +19,13 @@
   "dependencies": {
     "body-parser": "^1.8.1",
     "express": "^4.10.0",
+    "express-handlebars": "^1.1.0",
     "mongoose": "^3.8.18",
-    "node-jsx": "^0.12.2",
-    "react": "^0.12.1"
   },
   "devDependencies": {
     "chai": "^1.10.0",
     "chai-http": "^1.0.0",
-    "debowerify": "^1.0.1",
     "grunt": "^0.4.5",
-    "grunt-browserify": "^3.2.1",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-jshint": "^0.10.0",
@@ -37,6 +34,5 @@
     "grunt-express-server": "^0.4.19",
     "grunt-jscs": "^0.8.1",
     "matchdep": "*",
-    "reactify": "^0.17.1"
   }
 }
