--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chai": "^1.10.0",
     "chai-http": "^1.0.0",
     "grunt": "^0.4.5",
+    "grunt-browserify": "^3.2.1",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-jshint": "^0.10.0",
