--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   },
   "homepage": "https://github.com/redfieldstefan/mixandstones",
   "dependencies": {
+    "backbone": "^1.1.2",
     "body-parser": "^1.8.1",
     "express": "^4.10.0",
     "express-handlebars": "^1.1.0",
+    "handlebars": "^2.0.0",
+    "hbsfy": "^2.2.1",
+    "jquery": "^2.1.3",
     "mongoose": "^3.8.18"
   },
   "devDependencies": {
