--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "handlebars": "^2.0.0",
     "hbsfy": "^2.2.1",
     "jquery": "^2.1.3",
+    "lodash": "^3.3.0",
     "mongoose": "^3.8.18"
   },
   "devDependencies": {
